add common question.